[gd_scene load_steps=10 format=2]

[ext_resource path="res://Screens/Kenney Rocket.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/GUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/KeyCard.png" type="Texture" id=3]
[ext_resource path="res://Assets/timer_ending.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 74.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1240.0
margin_bottom = 54.0

[node name="Stats" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 1098.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="KeyIcon" type="TextureRect" parent="HBoxContainer/Stats"]
margin_right = 27.0
margin_bottom = 54.0
texture = ExtResource( 3 )

[node name="CapturedKeys" type="Label" parent="HBoxContainer/Stats"]
margin_left = 31.0
margin_top = 12.0
margin_right = 55.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Divider" type="Label" parent="HBoxContainer/Stats"]
margin_left = 59.0
margin_top = 12.0
margin_right = 77.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "/"

[node name="TotalKeys" type="Label" parent="HBoxContainer/Stats"]
margin_left = 81.0
margin_top = 12.0
margin_right = 105.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "3"

[node name="Timer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 1102.0
margin_right = 1240.0
margin_bottom = 54.0

[node name="TimeText" type="Label" parent="HBoxContainer/Timer"]
margin_right = 138.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time left: "
align = 2

[node name="TimeLeft" type="Label" parent="HBoxContainer/Timer"]
margin_top = 24.0
margin_right = 138.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 5 )
text = "60"
align = 2

[node name="TickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "FX"

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.5
